# Gemini-API-Web

./: Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
src/gemini_webapi/: client.py  constants.py  exceptions.py
src/gemini_webapi/server/: app.py  auth_browser.py  config.py  database.py  object_storage.py  rotator.py
src/gemini_webapi/server/static/: accounts.html  api.html  app.css  app.js  gems.html  history.html  index.html
src/gemini_webapi/types/: availablemodel.py  image.py
src/gemini_webapi/utils/remover/: README.md  __init__.py  gemini_watermark_remover.py  pyproject.toml
tests/: test_save_image.py  test_server_database.py  test_server_endpoints.py  test_server_models.py  test_server_rotator.py  test_server_tool_calls.py
