[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-webapi"
authors = [
    {name = "UZQueen"},
]
description = "✨ An elegant async Python wrapper for Google Gemini web app"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["API", "async", "Gemini", "Bard", "Google", "Generative AI", "LLM"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "curl-cffi~=0.15.0",
    "loguru~=0.7.3",
    "orjson~=3.11.7",
    "pydantic~=2.12.5",
]
dynamic = ["version"]

[project.optional-dependencies]
browser = ["browser-cookie3"]
server = [
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "playwright>=1.45,<2",
    "python-multipart>=0.0.9,<1",
    "uvicorn[standard]>=0.27,<1",
    "pillow>=10,<12",
    "numpy>=1.26,<3",
]

[project.scripts]
gemini-webapi-server = "gemini_webapi.server.app:main"

[project.urls]
Repository = "https://github.com/ToxicantX/Gemini-API-Web"
Issues = "https://github.com/ToxicantX/Gemini-API-Web/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gemini_webapi*"]

[tool.setuptools.package-data]
gemini_webapi = ["server/static/*", "utils/remover/*.png"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
